--- a/ecommerce-product-website/src/index.html
+++ b/ecommerce-product-website/src/index.html
@@ -30,9 +30,9 @@
         <img src="assets/images/header_photo.svg" alt="photo for the header section" />
         <div class="content">
           <h2 class="upper-title  upper-title--header">Beats Studio3 Wireless</h2>
-          <h1 class="title title--header">Experience your<br />music like never before.</h1>
+          <h1 class="title  title--header">Experience your<br />music like never before.</h1>
           <span class="group">
-            <p class="price  price--header"><span>&#36;</span>299.95</p>
+            <p class="price  price--white"><span>&#36;</span>299.95</p>
             <button class="btn  btn--yellow">buy now</button>
           </span>
           <p class="promo  promo--header"><span>&#36;</span>60 Apple Music gift card with purchase of select Beats products.*</p>
@@ -106,9 +106,9 @@
         </span>
       </div>
 
-      <div class="card">
+      <div class="card  card--padding-left">
         <div class="card__holder"><img class="card__img" src="assets/images/list-products_black-inear.svg" alt="Black in-earphones" /></div>
-        <h3 class="title  title--card  card__title--margin">Beatsˣ</h3>
+        <h3 class="title  title--card  card__title--margin">Beats<sup>x</sup></h3>
         <p class="card__desc  desc">Up to 8 hours of battery life<br />
           With Fast Fuel, a 5-minute charge = 2 hours of playback</p>
         <span class="group">
@@ -117,9 +117,9 @@
         </span>
       </div>
 
-      <div class="card">
+      <div class="card  card--padding-left">
         <div class="card__holder"><img class="card__img" src="assets/images/list-products_gray-headphone.svg" alt="Gray headphones" /></div>
-        <h3 class="title  title--card  card__title--margin">Beatsˣ</h3>
+        <h3 class="title  title--card  card__title--margin">Beats<sup>x</sup></h3>
         <p class="card__desc  desc">Up to 8 hours of battery life<br />
           With Fast Fuel, a 5-minute charge = 2 hours of playback</p>
         <span class="group">
@@ -130,7 +130,7 @@
 
       <div class="card">
         <div class="card__holder"><img class="card__img" src="assets/images/list-products_gold-inear.svg" alt="Golden in-earphones" /></div>
-        <h3 class="title  title--card  card__title--margin">Beatsˣ</h3>
+        <h3 class="title  title--card  card__title--margin">Beats<sup>x</sup></h3>
         <p class="card__desc  desc">Up to 8 hours of battery life<br />
           With Fast Fuel, a 5-minute charge = 2 hours of playback</p>
         <span class="group">
@@ -139,9 +139,9 @@
         </span>
       </div>
 
-      <div class="card">
+      <div class="card  card--padding-left">
         <div class="card__holder"><img class="card__img" src="assets/images/list-products_navy-inear.svg" alt="Navy in-earphones" /></div>
-        <h3 class="title  title--card  card__title--margin">Beatsˣ</h3>
+        <h3 class="title  title--card  card__title--margin">Beats<sup>x</sup></h3>
         <p class="card__desc  desc">Up to 8 hours of battery life<br />
           With Fast Fuel, a 5-minute charge = 2 hours of playback</p>
         <span class="group">
@@ -150,9 +150,9 @@
         </span>
       </div>
 
-      <div class="card">
+      <div class="card  card--padding-left">
         <div class="card__holder"><img class="card__img" src="assets/images/list-products_black-inear-lightning.svg" alt="Black in-earphones with lightning cable" /></div>
-        <h3 class="title  title--card  card__title--margin  card--hidden">Beatsˣ</h3>
+        <h3 class="title  title--card  card__title--margin  card--hidden">Beats<sup>x</sup></h3>
         <p class="card__desc  desc">Up to 8 hours of battery life<br />
           With Fast Fuel, a 5-minute charge = 2 hours of playback</p>
         <span class="group">
