--- a/ecommerce-product-website/src/index.html
+++ b/ecommerce-product-website/src/index.html
@@ -15,49 +15,55 @@
       <nav>
         <a href="#"><img class="nav__logo" src="assets/images/logo.svg" alt="logo for the website" /></a>
         <ul class="nav__list">
-          <li class="nav__item">headphones</li>
-          <li class="nav__item">earphones</li>
-          <li class="nav__item">speakers</li>
-          <li class="nav__item  nav__item--margin-right">explore</li>
+          <li class="nav__item"><a class="nav__item--link" href="#">headphones</a></li>
+          <li class="nav__item"><a class="nav__item--link" href="#">earphones</a></li>
+          <li class="nav__item"><a class="nav__item--link" href="#">speakers</a></li>
+          <li class="nav__item"><a class="nav__item--link" href="#">explore</a></li>
         </ul>
         <ul class="nav__list">
-          <li class="nav__item  nav__item--group"><img src="assets/images/nav_search-icon.svg" alt="search icon" /></li>
-          <li class="nav__item  nav__item--group"><img src="assets/images/nav_account-icon.svg" alt="account icon" /></li>
-          <li class="nav__item  nav__item--group"><img src="assets/images/nav_cart-icon.svg" alt="cart icon" /></li>
+          <li class="nav__item  nav__item--group"><a href="#"><img src="assets/images/nav_search-icon.svg" alt="search icon" /></a></li>
+          <li class="nav__item  nav__item--group"><a href="#"><img src="assets/images/nav_account-icon.svg" alt="account icon" /></a></li>
+          <li class="nav__item  nav__item--group"><a href="#"><img src="assets/images/nav_cart-icon.svg" alt="cart icon" /></a></li>
         </ul>
       </nav>
-      <section class="block">
+      <div class="block">
         <img src="assets/images/header_photo.svg" alt="photo for the header section" />
         <div class="content">
           <h2 class="upper-title  upper-title--header">Beats Studio3 Wireless</h2>
           <h1 class="title  title--header">Experience your<br />music like never before.</h1>
-          <span class="group">
-            <p class="price  price--white"><span>&#36;</span>299.95</p>
+          <div class="group">
+            <p class="price  price--white">&#36;299.95</p>
             <button class="btn  btn--yellow">buy now</button>
-          </span>
-          <p class="promo  promo--header"><span>&#36;</span>60 Apple Music gift card with purchase of select Beats products.*</p>
+          </div>
+          <p class="promo  promo--header">&#36;60 Apple Music gift card with purchase of select Beats products.*</p>
         </div>
-      </section>
+      </div>
     </header>
     <!-- Section 1 Beats Pill -->
     <section class="block  block--size  block--reverse">
-      <img src="assets/images/body_beats-pill.svg" alt="Photo Beats Pill for Section" />
-      <span class="carousel  carousel--black"></span>
-      <span class="carousel  carousel--gray"></span>
-      <span class="carousel  carousel--gray"></span>
+      <div>
+        <img src="assets/images/body_beats-pill.svg" alt="Photo Beats Pill for Section" />
+        <div>
+          <span class="carousel  carousel--black"></span>
+          <span class="carousel  carousel--gray"></span>
+          <span class="carousel  carousel--gray"></span>
+        </div>
+      </div>
       <div class="content">
         <p class="upper-title">Portable Wireless Speaker</p>
-        <h2 class="title">Beats Pill<span class="sup">+</span></h2><sup></sup>
+        <h2 class="title">Beats Pill<sup>+</sup></h2>
         <p class="sub-title  sub-title--font">Available Colors</p>
         <p class="upper-title">Find your Color</p>
-        <span class="dot  dot--white"></span>
-        <span class="dot  dot--red"></span>
-        <span class="dot  dot--black"></span>
-        <span class="group">
-          <p class="price"><span>&#36;</span>299.95</p>
+        <div>
+          <span class="dot  dot--white"></span>
+          <span class="dot  dot--red"></span>
+          <span class="dot  dot--black"></span>
+        </div>
+        <div class="group">
+          <p class="price">&#36;299.95</p>
           <button class="btn  btn--black">buy now</button>
-        </span>
-        <p class="promo  promo--black"><span>&#36;</span>60 Apple Music gift card with purchase of select Beats products.*</p>
+        </div>
+        <p class="promo  promo--black">&#36;60 Apple Music gift card with purchase of select Beats products.*</p>
       </div>
     </section>
     <!-- Section 2 PowerBeat Pro -->
@@ -66,15 +72,17 @@
       <div class="content">
         <p class="upper-title">Totally wireless high-performance earphones</p>
         <h2 class="title  title--uppercase">Powerbeats Pro</h2>
-        <p class="desc">Up to 9 hours of listening time <br />
-          Apple H1 Chip <span>&#38;</span> Class 1 Wireless Bluetooth<span>&#174;</span> <br />
-          Sweat <span>&#38;</span> water resistant <br />
-          Adjustable, secure-fit earhooks</p>
-        <span class="group">
-          <p class="price"><span>&#36;</span>199.95</p>
+        <div class="desc">
+          <p>Up to 9 hours of listening time</p> 
+          <p>Apple H1 Chip &#38; Class 1 Wireless Bluetooth&#174;</p> 
+          <p>Sweat &#38; water resistant</p> 
+          <p>Adjustable, secure-fit earhooks</p>
+        </div>
+        <div class="group">
+          <p class="price">&#36;199.95</p>
           <button class="btn  btn--black">buy now</button>
-        </span>
-        <p class="promo  promo--white"><span>&#36;</span>60 Apple Music gift card with purchase of select Beats products.*</p>
+        </div>
+        <p class="promo  promo--white">&#36;60 Apple Music gift card with purchase of select Beats products.*</p>
       </div>
     </section>
     <!-- Section 3 -->
@@ -82,15 +90,16 @@
       <img src="assets/images/body_section-3.svg" alt="Photo for Section 3" />
       <div class="content">
         <p class="upper-title  upper-title--margin-bottom">Talk. Listen. Beats.</p>
-        <p class="desc">Up to 8 hours of battery life <br />
-          With Fast Fuel, a 5-minute charge = 2 hours of playback <br />
-          Sweat <span>&#38;</span> water resistant <br />
-          Apple W1 Chip <span>&#38;</span> Class 1 Wireless Bluetooth<span>&#174;</span> <br />
-        </p>
-        <span class="group">
-          <p class="price"><span>&#36;</span>199.95</p>
+        <div class="desc">
+          <p>Up to 8 hours of battery life</p>
+          <p>With Fast Fuel, a 5-minute charge = 2 hours of playback</p>
+          <p>Sweat &#38; water resistant</p>
+          <p>Apple W1 Chip &#38; Class 1 Wireless Bluetooth&#174;</p>
+        </div>
+        <div class="group">
+          <p class="price">&#36;199.95</p>
           <button class="btn  btn--black">buy now</button>
-        </span>
+        </div>
       </div>
     </section>
     <!-- List Product -->
@@ -99,125 +108,141 @@
       <div class="card">
         <div class="card__holder"><img class="card__img" src="assets/images/list-products_yellow-headphone.svg" alt="Yellow headphones" /></div>
         <p class="title  title--card  card__title--margin-line-1  card--size">Beats<sup>x</sup></p>
-        <p class="card__desc  desc">Up to 8 hours of battery life<br />
-          With Fast Fuel, a 5-minute charge = 2 hours of playback</p>
-        <span class="group">
-          <p class="card__price  card__price--margin"><span>&#36;</span>299.95</p>
+        <div class="card__desc  desc">
+          <p>Up to 8 hours of battery life</p>
+          <p>With Fast Fuel, a 5-minute charge = 2 hours of playback</p>
+        </div>
+        <div class="group">
+          <p class="card__price  card__price--margin">&#36;299.95</p>
           <button class="btn  btn--card  btn--black">buy now</button>
-        </span>
+        </div>
       </div>
 
       <!-- Product 2 -->
       <div class="card  card--padding-left">
         <div class="card__holder"><img class="card__img" src="assets/images/list-products_black-inear.svg" alt="Black in-earphones" /></div>
         <p class="title  title--card  card__title--margin-line-1">Beats<sup>x</sup></p>
-        <p class="card__desc  desc">Up to 8 hours of battery life<br />
-          With Fast Fuel, a 5-minute charge = 2 hours of playback</p>
-        <span class="group">
-          <p class="card__price  card__price--margin"><span>&#36;</span>199.95</p>
+        <div class="card__desc  desc">
+          <p>Up to 8 hours of battery life</p>
+          <p>With Fast Fuel, a 5-minute charge = 2 hours of playback</p>
+        </div>
+        <div class="group">
+          <p class="card__price  card__price--margin">&#36;199.95</p>
           <button class="btn  btn--card  btn--black">buy now</button>
-        </span>
+        </div>
       </div>
 
       <!-- Product 3 -->
       <div class="card  card--padding-left">
         <div class="card__holder"><img class="card__img" src="assets/images/list-products_gray-headphone.svg" alt="Gray headphones" /></div>
         <p class="title  title--card  card__title--margin-line-1">Beats<sup>x</sup></p>
-        <p class="card__desc  desc">Up to 8 hours of battery life<br />
-          With Fast Fuel, a 5-minute charge = 2 hours of playback</p>
-        <span class="group">
-          <p class="card__price  card__price--margin"><span>&#36;</span>199.95</p>
+        <div class="card__desc  desc">
+          <p>Up to 8 hours of battery life</p>
+          <p>With Fast Fuel, a 5-minute charge = 2 hours of playback</p>
+        </div>
+        <div class="group">
+          <p class="card__price  card__price--margin">&#36;199.95</p>
           <button class="btn  btn--card  btn--black">buy now</button>
-        </span>
+        </div>
       </div>
 
       <!-- Product 4 -->
       <div class="card">
         <div class="card__holder"><img class="card__img" src="assets/images/list-products_gold-inear.svg" alt="Golden in-earphones" /></div>
         <p class="title  title--card  card__title--margin-line-2">Beats<sup>x</sup></p>
-        <p class="card__desc  card__desc--margin  desc">Up to 8 hours of battery life<br />
-          With Fast Fuel, a 5-minute charge = 2 hours of playback</p>
-        <span class="group">
-          <p class="card__price  card__price--margin-line-2"><span>&#36;</span>999.95</p>
+        <div class="card__desc  desc">
+          <p>Up to 8 hours of battery life</p>
+          <p>With Fast Fuel, a 5-minute charge = 2 hours of playback</p>
+        </div>
+        <div class="group">
+          <p class="card__price  card__price--margin-line-2">&#36;999.95</p>
           <button class="btn  btn--card  btn--card-line-2  btn--black">buy now</button>
-        </span>
+        </div>
       </div>
 
       <!-- Product 5 -->
       <div class="card  card--padding-left">
         <div class="card__holder"><img class="card__img" src="assets/images/list-products_navy-inear.svg" alt="Navy in-earphones" /></div>
         <p class="title  title--card  card__title--margin-line-2">Beats<sup>x</sup></p>
-        <p class="card__desc  card__desc--margin  desc">Up to 8 hours of battery life<br />
-          With Fast Fuel, a 5-minute charge = 2 hours of playback</p>
-        <span class="group">
-          <p class="card__price  card__price--margin-line-2"><span>&#36;</span>99.95</p>
+        <div class="card__desc  desc">
+          <p>Up to 8 hours of battery life</p>
+          <p>With Fast Fuel, a 5-minute charge = 2 hours of playback</p>
+        </div>
+        <div class="group">
+          <p class="card__price  card__price--margin-line-2">&#36;99.95</p>
           <button class="btn  btn--card  btn--card-line-2  btn--black">buy now</button>
-        </span>
+        </div>
       </div>
 
       <!-- Product 6 -->
       <div class="card  card--padding-left">
         <div class="card__holder"><img class="card__img" src="assets/images/list-products_black-inear-lightning.svg" alt="Black in-earphones with lightning cable" /></div>
         <p class="title  title--card  card__title--margin-line-2  card--hidden">Beats<sup>x</sup></p>
-        <p class="card__desc  card__desc--margin  desc">Up to 8 hours of battery life<br />
-          With Fast Fuel, a 5-minute charge = 2 hours of playback</p>
-        <span class="group">
-          <p class="card__price  card__price--margin-line-2"><span>&#36;</span>299.95</p>
+        <div class="card__desc  desc">
+          <p>Up to 8 hours of battery life</p>
+          <p>With Fast Fuel, a 5-minute charge = 2 hours of playback</p>
+        </div>
+        <div class="group">
+          <p class="card__price  card__price--margin-line-2">&#36;299.95</p>
           <button class="btn  btn--card  btn--card-line-2  btn--black">buy now</button>
-        </span>
+        </div>
       </div>
     </section>
     <!-- Contact Form -->
-    <form class="form-content" action="#" method="get">
-      <h2 class="title  form-title--margin">Hear it first</h2>
-      <p class="sub-title  form-sub-title--bottom ">Get updates on product drops, collaborations and all things Beats.</p>
-      <input class="input-text" type="text" placeholder="Enter your email" />
-      <input class="btn  btn--form  btn--yellow" type="submit" value="Sign up" />
-    </form>
+    <section class="form-container">
+      <form class="form-content" action="#" method="get">
+        <h2 class="title  form-title--margin">Hear it first</h2>
+        <p class="sub-title  form-sub-title--bottom ">Get updates on product drops, collaborations and all things Beats.</p>
+        <input class="input-text" type="text" placeholder="Enter your email" />
+        <input class="btn  btn--form  btn--yellow" type="submit" value="Sign up" />
+      </form>
+    </section>
     <!-- Footer -->
-    <footer class="grid-container">
-      <div class="grid-item"><img class="grid-logo" src="assets/images/logo.svg" alt="Logo at the footer"></div>
-      <div class="grid-item">
+    <footer class="grid">
+      <div class="grid__item"><img class="grid__logo" src="assets/images/logo.svg" alt="Logo at the footer"></div>
+      <div class="grid__item">
         <ul>
-          <li class="grid-title">products</li>
-          <li>headphones</li>
-          <li>earphones</li>
-          <li>speakers</li>
-          <li>accessories</li>
-          <li>collaborations</li>
-          <li>beatsaudio</li>
-          <li>special offers</li>
+          <li><a class="grid__title" href="#">products</a></li>
+          <li><a class="grid__item--link" href="#">headphones</a></li>
+          <li><a class="grid__item--link" href="#">earphones</a></li>
+          <li><a class="grid__item--link" href="#">speakers</a></li>
+          <li><a class="grid__item--link" href="#">accessories</a></li>
+          <li><a class="grid__item--link" href="#">collaborations</a></li>
+          <li><a class="grid__item--link" href="#">beatsaudio</a></li>
+          <li><a class="grid__item--link" href="#">special offers</a></li>
         </ul>
       </div>
-      <div class="grid-item">
+      <div class="grid__item">
         <ul>
-          <li class="grid-title">support</li>
-          <li>product help</li>
-          <li>service & warranty</li>
-          <li>register your beats</li>
-          <li>update your beats</li>
-          <li>authorized service providers</li>
-          <li>contact support</li>
-          <li>international numbers</li>
+          <li><a class="grid__title" href="#">support</a></li>
+          <li><a class="grid__item--link" href="#">product help</a></li>
+          <li><a class="grid__item--link" href="#">service & warranty</a></li>
+          <li><a class="grid__item--link" href="#">register your beats</a></li>
+          <li><a class="grid__item--link" href="#">update your beats</a></li>
+          <li><a class="grid__item--link" href="#">authorized service providers</a></li>
+          <li><a class="grid__item--link" href="#">contact support</a></li>
+          <li><a class="grid__item--link" href="#">international numbers</a></li>
         </ul>
       </div>
-      <div class="grid-item">
+      <div class="grid__item">
         <ul>
-          <li class="grid-title">company</li>
-          <li>product help</li>
-          <li>news and events</li>
-          <li>promotion terms</li>
-          <li>privacy policy</li>
-          <li>trademark</li>
-          <li>terms of use</li>
-          <li>cookies</li>
+          <li><a class="grid__title" href="#">company</a></li>
+          <li><a class="grid__item--link" href="#">product help</a></li>
+          <li><a class="grid__item--link" href="#">news and events</a></li>
+          <li><a class="grid__item--link" href="#">promotion terms</a></li>
+          <li><a class="grid__item--link" href="#">privacy policy</a></li>
+          <li><a class="grid__item--link" href="#">trademark</a></li>
+          <li><a class="grid__item--link" href="#">terms of use</a></li>
+          <li><a class="grid__item--link" href="#">cookies</a></li>
         </ul>
       </div>
-      <div class="grid-item">
-        <p class="grid-title">Follow Us</p>
-        <img src="assets/images/footer_icon.svg" alt="Footer follow icon" />
+      <div class="grid__item">
+        <ul>
+          <li><a class="grid__title" href="#">Follow Us</a></li>
+          <li><a class="grid__item--link" href="#"><img src="assets/images/footer_icon.svg" alt="Footer follow icon" /></a></li>
+        </ul>
       </div>
-      <p class="grid-item  grid-line">Copyright <span>&#169;</span> 2020 Apple Inc. - All rights reserved.</p>
+      <p class="grid__item  grid__line">Copyright &#169; 2020 Apple Inc. - All rights reserved.</p>
     </footer>
   </div>
 
